# image-datecorrector

./: .gitignore  Readme.md  flake.nix  main.sh  pyproject.toml
app/: main.py  test_main.py  utils.py
